# hstrace

./: .travis.yml  Cargo.toml  README.md  build.rs
.github/workflows/: test.yml
data/c_code/: Makefile  main.c
docs/: 01_hstrace_plan.md
examples/: 00_test.rs  01_write_files.rs  02_non_usr_read_files.rs  03_match_syscall_name.rs  04_trace_pid.rs  05_trace_child.rs
fuzzing/: .gitignore  Cargo.toml  Makefile  README.md
fuzzing/src/: main.rs
hstrace_derive/: Cargo.toml  README.md
hstrace_derive/src/: lib.rs
src/: clap.yml  enums.rs  from_c.rs  lib.rs  macros.rs  main.rs  output.rs  prelude.rs  trace_grouper.rs  traits.rs  wrapper.h
src/call/: fncntl.rs  mman.rs  mod.rs  prctl.rs  prelude.rs  sched.rs  sendfile.rs  socket.rs  stat.rs  swap.rs  sysinfo.rs  unistd.rs  utsname.rs
src/ptrace/: mock_ptrace.rs  mod.rs  syscall_ptrace.rs
src/syscall/: error.rs  mod.rs  x86_64.rs
src/trace/: error.rs  hstrace_builder.rs  hstrace_impl.rs  hstrace_iterator.rs  mod.rs  options.rs  output.rs  syscall_parameters.rs  thread.rs
src/value/: helpers.rs  mod.rs  transformer.rs  value_impl.rs
src/value/kind/: memory_address.rs  mod.rs
tests/: test_c_binary.rs  test_trace_pid.rs
